# otus-13-final-project

./: .gitignore  CMakeLists.txt  ProducerConsumer.hpp  Queue.hpp  README.md  main.cpp  serialization.cpp  serialization.hpp  test_queue.cpp  test_serialization.cpp  tests.cpp
.github/workflows/: main.yml
docs/: Doxyfile
